# dbnyan

./: .gitignore  Cargo.toml  Makefile  README.ko.md  README.md
crates/core/: Cargo.toml
crates/core/migrations/: 001_connections.sql  002_query_history.sql  003_connection_color.sql  004_aws_ssm.sql  005_query_favorites.sql
crates/core/src/: aws_ssm.rs  connection.rs  favorites.rs  history.rs  lib.rs  mysql.rs  process.rs  query.rs  session.rs  ssh.rs  tunnel.rs
crates/server/: Cargo.toml
crates/server/src/: chat.rs  chat_stream.rs  connections.rs  error.rs  main.rs  runtime.rs
web/: README.md  package.json  vite.config.ts
web/src/: app.html
web/src/lib/: api.ts  colors.ts
web/src/lib/chat/: ChatInput.svelte  ChatMessage.svelte  ChatPanel.svelte  markdown.ts
web/src/lib/components/: ConnectionForm.svelte  NewTabModal.svelte  QueryView.svelte  RowGrid.svelte  SqlEditor.svelte  SqlGenerator.svelte  TabContent.svelte
web/src/lib/stores/: chat.svelte.ts  tabs.svelte.ts
web/src/routes/: +page.svelte  layout.css
