[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
authors = ["dbnyan"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "mysql",
    "chrono",
    "json",
    "macros",
    "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
