[package]
name = "dbnyan-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
